--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 RewriteEngine on
 
+RewriteEngine On
+RewriteRule ^/api/v1/([^\.]+) api/v1/$1.php
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]+)$ index.php?p=$1 [L]
